add akeret bayesian 20115

--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -1961,7 +1961,7 @@
 }
 
 @article{crema2016revealingpatternsofculturaltransmissionfromfrequencydataequilibriumandnonequilibriumassumptions,
-	author = "{Crema Enrico R.} and {Kandler Anne} and {Shennan Stephen}",
+	author = "Crema, Enrico R. and Kandler, Anne and Shennan, Stephen",
 	doi = "10.1038/srep39122",
 	journal = "Scientific Reports",
 	localfile = "../pdfs/crema2016revealingpatternsofculturaltransmissionfromfrequencydataequilibriumandnonequilibriumassumptions.pdf",
@@ -2062,5 +2062,17 @@
 	url = "http://rsos.royalsocietypublishing.org/content/4/9/170949",
 	volume = "4",
 	year = "2017"
+}
+
+@article{akeret2015approximatebayesiancomputationforforwardmodelingincosmology,
+	abstract = "Bayesian inference is often used in cosmology and astrophysics to derive constraints on model parameters from observations. This approach relies on the ability to compute the likelihood of the data given a choice of model parameters. In many practical situations, the likelihood function may however be unavailable or intractable due to non-gaussian errors, non-linear measurements processes, or complex data formats such as catalogs and maps. In these cases, the simulation of mock data sets can often be made through forward modeling. We discuss how Approximate Bayesian Computation (ABC) can be used in these cases to derive an approximation to the posterior constraints using simulated data sets. This technique relies on the sampling of the parameter set, a distance metric to quantify the difference between the observation and the simulations and summary statistics to compress the information in the data. We first review the principles of ABC and discuss its implementation using a Population Monte-Carlo (PMC) algorithm and the Mahalanobis distance metric. We test the performance of the implementation using a Gaussian toy model. We then apply the ABC technique to the practical case of the calibration of image simulations for wide field cosmological surveys. We find that the ABC analysis is able to provide reliable parameter constraints for this problem and is therefore a promising technique for other applications in cosmology and astrophysics. Our implementation of the ABC PMC method is made available via a public code release.",
+	author = "Akeret, Jo{\"e}l and Refregier, Alexandre and Amara, Adam and Seehars, Sebastian and Hasner, Caspar",
+	journal = "Journal of Cosmology and Astroparticle Physics",
+	number = "08",
+	pages = "043",
+	title = "{Approximate Bayesian computation for forward modeling in cosmology}",
+	url = "http://stacks.iop.org/1475-7516/2015/i=08/a=043",
+	volume = "2015",
+	year = "2015"
 }
 
