update of biblio on cultural evolution

--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -15,6 +15,21 @@
 	year = "2016"
 }
 
+@article{boyd2009votingwithyourfeetpayoffbiasedmigrationandtheevolutionofgroupbeneficialbehavior,
+	author = "Boyd, Robert and Richerson, Peter J.",
+	doi = "10.1016/j.jtbi.2008.12.007",
+	issn = "0022-5193",
+	journal = "Journal of Theoretical Biology",
+	keywords = "Cultural evolution; Population structure; Equilibrium selection",
+	localfile = "../pdfs/boyd2009votingwithyourfeetpayoffbiasedmigrationandtheevolutionofgroupbeneficialbehavior.pdf",
+	number = "2",
+	pages = "331--339",
+	title = "{Voting with your feet: Payoff biased migration and the evolution of group beneficial behavior}",
+	url = "http://www.sciencedirect.com/science/article/pii/S0022519308006371",
+	volume = "257",
+	year = "2009"
+}
+
 @book{frazer1995anevolutionaryarchitecture,
 	author = "Frazer, John",
 	isbn = "1870890477,9781870890472",
@@ -43,6 +58,36 @@
 	year = "1952"
 }
 
+@article{kendal2009theevolutionofsociallearningrulespayoffbiasedandfrequencydependentbiasedtransmission,
+	author = "Kendal, Jeremy and Giraldeau, Luc-Alain and Laland, Kevin",
+	doi = "10.1016/j.jtbi.2009.05.029",
+	issn = "0022-5193",
+	journal = "Journal of Theoretical Biology",
+	keywords = "Cultural evolution; Gene-culture coevolution; Social learning; Conformity; Social learning strategy",
+	localfile = "../pdfs/kendal2009theevolutionofsociallearningrulespayoffbiasedandfrequencydependentbiasedtransmission.pdf",
+	number = "2",
+	pages = "210--219",
+	title = "{The evolution of social learning rules: Payoff-biased and frequency-dependent biased transmission}",
+	url = "http://www.sciencedirect.com/science/article/pii/S0022519309002288",
+	volume = "260",
+	year = "2009"
+}
+
+@article{chudek2012prestigebiasedculturallearningbystandersdifferentialattentiontopotentialmodelsinfluenceschildrenslearning,
+	author = "Chudek, Maciej and Heller, Sarah and Birch, Susan and Henrich, Joseph",
+	doi = "10.1016/j.evolhumbehav.2011.05.005",
+	issn = "1090-5138",
+	journal = "Evolution and Human Behavior",
+	keywords = "Prestige bias; Selective imitation; Children; Learning",
+	localfile = "../pdfs/chudek2012prestigebiasedculturallearningbystandersdifferentialattentiontopotentialmodelsinfluenceschildrenslearning.pdf",
+	number = "1",
+	pages = "46--56",
+	title = "{Prestige-biased cultural learning: bystander's differential attention to potential models influences children's learning}",
+	url = "http://www.sciencedirect.com/science/article/pii/S1090513811000481",
+	volume = "33",
+	year = "2012"
+}
+
 @article{rubiocampillo2016modelselectioninhistoricalresearchusingapproximatebayesiancomputation,
 	abstract = {<sec id="sec001"> <title>Formal Models and History</title> Computational models are increasingly being used to study historical dynamics. This new trend, which could be named Model-Based History, makes use of recently published datasets and innovative quantitative methods to improve our understanding of past societies based on their written sources. The extensive use of formal models allows historians to re-evaluate hypotheses formulated decades ago and still subject to debate due to the lack of an adequate quantitative framework. The initiative has the potential to transform the discipline if it solves the challenges posed by the study of historical dynamics. These difficulties are based on the complexities of modelling social interaction, and the methodological issues raised by the evaluation of formal models against data with low sample size, high variance and strong fragmentation. </sec> <sec id="sec002"> <title>Case Study</title> This work examines an alternate approach to this evaluation based on a Bayesian-inspired model selection method. The validity of the classical Lanchester?s laws of combat is examined against a dataset comprising over a thousand battles spanning 300 years. Four variations of the basic equations are discussed, including the three most common formulations (linear, squared, and logarithmic) and a new variant introducing fatigue. Approximate Bayesian Computation is then used to infer both parameter values and model selection via Bayes Factors. </sec> <sec id="sec003"> <title>Impact</title> Results indicate decisive evidence favouring the new fatigue model. The interpretation of both parameter estimations and model selection provides new insights into the factors guiding the evolution of warfare. At a methodological level, the case study shows how model selection methods can be used to guide historical research through the comparison between existing hypotheses and empirical evidence. </sec>},
 	author = "Rubio-Campillo, Xavier",
@@ -59,6 +104,23 @@
 	year = "2016"
 }
 
+@article{mesoudi2017pursuingdarwinscuriousparallelprospectsforascienceofculturalevolution,
+	abstract = "In the past few decades, scholars from several disciplines have pursued the curious parallel noted by Darwin between the genetic evolution of species and the cultural evolution of beliefs, skills, knowledge, languages, institutions, and other forms of socially transmitted information. Here, I review current progress in the pursuit of an evolutionary science of culture that is grounded in both biological and evolutionary theory, but also treats culture as more than a proximate mechanism that is directly controlled by genes. Both genetic and cultural evolution can be described as systems of inherited variation that change over time in response to processes such as selection, migration, and drift. Appropriate differences between genetic and cultural change are taken seriously, such as the possibility in the latter of nonrandomly guided variation or transformation, blending inheritance, and one-to-many transmission. The foundation of cultural evolution was laid in the late 20th century with population-genetic style models of cultural microevolution, and the use of phylogenetic methods to reconstruct cultural macroevolution. Since then, there have been major efforts to understand the sociocognitive mechanisms underlying cumulative cultural evolution, the consequences of demography on cultural evolution, the empirical validity of assumed social learning biases, the relative role of transformative and selective processes, and the use of quantitative phylogenetic and multilevel selection models to understand past and present dynamics of society-level change. I conclude by highlighting the interdisciplinary challenges of studying cultural evolution, including its relation to the traditional social sciences and humanities.",
+	author = "Mesoudi, Alex",
+	doi = "10.1073/pnas.1620741114",
+	eprint = "http://www.pnas.org/content/114/30/7853.full.pdf",
+	issn = "0027-8424",
+	journal = "Proceedings of the National Academy of Sciences",
+	localfile = "../pdfs/mesoudi2017pursuingdarwinscuriousparallelprospectsforascienceofculturalevolution.pdf",
+	number = "30",
+	pages = "7853--7860",
+	publisher = "National Academy of Sciences",
+	title = "{Pursuing Darwin{\textquoteright}s curious parallel: Prospects for a science of cultural evolution}",
+	url = "http://www.pnas.org/content/114/30/7853",
+	volume = "114",
+	year = "2017"
+}
+
 @article{weaver1948scienceandcomplexity,
 	author = "Weaver, Warren",
 	journal = "American scientist",
@@ -68,6 +130,23 @@
 	title = "{Science and complexity.}",
 	volume = "36",
 	year = "1948"
+}
+
+@article{acerbi2015ifweareallculturaldarwinianswhatsthefussaboutclarifyingrecentdisagreementsinthefieldofculturalevolution,
+	abstract = "Cultural evolution studies are characterized by the notion that culture evolves accordingly to broadly Darwinian principles. Yet how far the analogy between cultural and genetic evolution should be pushed is open to debate. Here, we examine a recent disagreement that concerns the extent to which cultural transmission should be considered a preservative mechanism allowing selection among different variants, or a transformative process in which individuals recreate variants each time they are transmitted. The latter is associated with the notion of ``cultural attraction''. This issue has generated much misunderstanding and confusion. We first clarify the respective positions, noting that there is in fact no substantive incompatibility between cultural attraction and standard cultural evolution approaches, beyond a difference in focus. Whether cultural transmission should be considered a preservative or reconstructive process is ultimately an empirical question, and we examine how both preservative and reconstructive cultural transmission has been studied in recent experimental research in cultural evolution. Finally, we discuss how the relative importance of preservative and reconstructive processes may depend on the granularity of analysis and the domain being studied.",
+	author = "Acerbi, Alberto and Mesoudi, Alex",
+	day = "01",
+	doi = "10.1007/s10539-015-9490-2",
+	issn = "1572-8404",
+	journal = "Biology {\&} Philosophy",
+	localfile = "../pdfs/acerbi2015ifweareallculturaldarwinianswhatsthefussaboutclarifyingrecentdisagreementsinthefieldofculturalevolution.pdf",
+	month = "Jul",
+	number = "4",
+	pages = "481--503",
+	title = "{If we are all cultural Darwinians what's the fuss about? Clarifying recent disagreements in the field of cultural evolution}",
+	url = "https://doi.org/10.1007/s10539-015-9490-2",
+	volume = "30",
+	year = "2015"
 }
 
 @incollection{paolo00simulationmodelsasopaquethoughtexperiments,
@@ -308,21 +387,6 @@
 	localfile = "../pdfs/verboven2015structureandperformanceintheromaneconomymodelsmethodsandcasestudies.pdf",
 	publisher = "Latomus \& Peeters",
 	title = "{The knights who say NIE. Can neo-institutional economics live up to its expectation in ancient history research?}",
-	year = "2015"
-}
-
-@article{mesoudi2015culturalevolutionareviewoftheoryfindingsandcontroversies,
-	author = "Mesoudi, Alex",
-	doi = "10.1007/s11692-015-9320-0",
-	issn = "0071-3260",
-	journal = "Evolutionary Biology",
-	keywords = "Cultural evolution; Cultural transmission; Cumulative culture; Demography; Human evolution; Social learning",
-	language = "English",
-	localfile = "../pdfs/mesoudi2015culturalevolutionareviewoftheoryfindingsandcontroversies.pdf",
-	pages = "1--17",
-	publisher = "Springer US",
-	title = "{Cultural Evolution: A Review of Theory, Findings and Controversies}",
-	url = "http://dx.doi.org/10.1007/s11692-015-9320-0",
 	year = "2015"
 }
 
@@ -732,7 +796,7 @@
 
 @article{frydman2015usingneuraldatatotestatheoryofinvestorbehavioranapplicationtorealizationutility,
 	abstract = "We conduct a study in which subjects trade stocks in an experimental market while we measure their brain activity using functional magnetic resonance imaging. All of the subjects trade in a suboptimal way. We use the neural data to test a ``realization utility'' explanation for their behavior. We find that activity in two areas of the brain that are important for economic decision-making exhibit activity consistent with the predictions of realization utility. These results provide support for the realization utility model. More generally, they demonstrate that neural data can be helpful in testing models of investor behavior.",
-	author = "FRYDMAN, CARY and BARBERIS, NICHOLAS and Camerer, Colin F. and BOSSAERTS, PETER and RANGEL, ANTONIO",
+	author = "Frydman, Cary and Barberis, Nicholas and Camerer, Colin F. and Bossaerts, Peter and Rangel, Antonio",
 	doi = "10.1111/jofi.12126",
 	issn = "1540-6261",
 	journal = "The Journal of Finance",
@@ -1114,8 +1178,7 @@
 	year = "2009"
 }
 
-@article{lycett2015CulturalevolutionaryapproachestoartifactvariationovertimeandspaceBasisprogressandprospects
-,
+@article{lycett2015culturalevolutionaryapproachestoartifactvariationovertimeandspaceBasisprogressandprospects,
 	author = "Lycett, Stephen J.",
 	doi = "10.1016/j.jas.2015.01.004",
 	file = "1-s2.0-S0305440315000072-main.pdf:/home/simon/.mozilla/firefox/hbd7she8.default-1398248423370/zotero/storage/Q3C756ED/1-s2.0-S0305440315000072-main.pdf:application/pdf",
@@ -2003,19 +2066,20 @@
 	year = "1999"
 }
 
-@Inbook{kandler2015inferringlearningstrategiesfromculturalfrequencydata,
-    author={Kandler, Anne and Powell, Adam},
-    editor={Mesoudi, Alex and Aoki, Kenichi},
-    title={Inferring Learning Strategies from Cultural Frequency Data},
-    bookTitle={Learning Strategies and Cultural Evolution during the Palaeolithic},
-    year={2015},
-    publisher={Springer Japan},
-    address={Tokyo},
-    pages={85--101},
-    abstract={Social learning has been identified as one of the fundamentals of culture and therefore the understanding of why and how individuals use social information presents one of the big questions in cultural evolution. To date much of the theoretical work on social learning has been done in isolation of data. Evolutionary models often provide important insight into which social learning strategies are expected to have evolved but cannot tell us which strategies human populations actually use. In this chapter we explore how much information about the underlying learning strategies can be extracted by analysing the temporal occurrence or usage patterns of different cultural variants in a population. We review the previous methodology that has attempted to infer the underlying social learning processes from such data, showing that they may apply statistical methods with insufficient power to draw reliable inferences. We then introduce a generative inference framework that allows robust inferences on the social learning processes that underlie cultural frequency data. Using developments in population genetics---in the form of generative simulation modelling and approximate Bayesian computation---as our model, we demonstrate the strength of this method with an example based on simulated data.},
-    isbn={978-4-431-55363-2},
-    doi={10.1007/978-4-431-55363-2_7},
-    url={https://doi.org/10.1007/978-4-431-55363-2_7}
+@inbook{kandler2015inferringlearningstrategiesfromculturalfrequencydata,
+	abstract = "Social learning has been identified as one of the fundamentals of culture and therefore the understanding of why and how individuals use social information presents one of the big questions in cultural evolution. To date much of the theoretical work on social learning has been done in isolation of data. Evolutionary models often provide important insight into which social learning strategies are expected to have evolved but cannot tell us which strategies human populations actually use. In this chapter we explore how much information about the underlying learning strategies can be extracted by analysing the temporal occurrence or usage patterns of different cultural variants in a population. We review the previous methodology that has attempted to infer the underlying social learning processes from such data, showing that they may apply statistical methods with insufficient power to draw reliable inferences. We then introduce a generative inference framework that allows robust inferences on the social learning processes that underlie cultural frequency data. Using developments in population genetics---in the form of generative simulation modelling and approximate Bayesian computation---as our model, we demonstrate the strength of this method with an example based on simulated data.",
+	address = "Tokyo",
+	author = "Kandler, Anne and Powell, Adam",
+	booktitle = "{Learning Strategies and Cultural Evolution during the Palaeolithic}",
+	doi = "10.1007/978-4-431-55363-2_7",
+	editor = "Mesoudi, Alex and Aoki, Kenichi",
+	isbn = "978-4-431-55363-2",
+	localfile = "../pdfs/kandler2015inferringlearningstrategiesfromculturalfrequencydata.pdf",
+	pages = "85--101",
+	publisher = "Springer Japan",
+	title = "{Inferring Learning Strategies from Cultural Frequency Data}",
+	url = "https://doi.org/10.1007/978-4-431-55363-2\_7",
+	year = "2015"
 }
 
 @article{kandler2017generativeinferenceforculturalevolution,
@@ -2089,5 +2153,159 @@
 	url = "http://stacks.iop.org/1475-7516/2015/i=08/a=043",
 	volume = "2015",
 	year = "2015"
+}
+
+@book{mesoudi2015learningstrategiesandculturalevolutionduringthepalaeolithic,
+	author = "{Alex Mesoudi}, Kenichi Aoki (eds.)",
+	edition = "1",
+	isbn = "978-4-431-55362-5,978-4-431-55363-2",
+	publisher = "Springer Japan",
+	series = "{Replacement of Neanderthals by Modern Humans Series}",
+	title = "{Learning Strategies and Cultural Evolution during the Palaeolithic}",
+	url = "http://gen.lib.rus.ec/book/index.php?md5=8F0561BAD84B1F82EC4FB1589363A615",
+	year = "2015"
+}
+
+@article{eerkens2007culturaltransmissiontheoryandthearchaeologicalrecordprovidingcontexttounderstandingvariationandtemporalchangesinmaterialculture,
+	abstract = "Cultural transmission (CT) is implicit in many explanations of culture change. Formal CT models were defined by anthropologists 30 years ago and have been a subject of active research in the social sciences in the ensuing years. Although increasing in popularity in recent years, CT has not seen extensive use in archaeological research, despite the quantitative rigor of many CT models and the ability to create testable hypotheses. Part of the reason for the slow adoption, we argue, has been the continuing focus on change in central tendency and mode in archaeology, instead of change in dispersion or variance. Yet archaeological research provides an excellent data source for exploring processes of CT. We review CT research in the anthropological sciences and outline the benefits and drawbacks of this theoretical framework for the study of material culture. We argue that CT can shed much light on our understandings of why material technology changes over time, including explanations of differential rates of change among different technologies. We further argue that transmission processes are greatly affected by the content, context, and mode of transmission and fundamentally structure variation in material culture. Including ideas from CT can provide greater context for explaining and understanding changes in the variation of artifacts over time. Finally, we outline what we feel should be the goals of CT research in archaeology in the coming years.",
+	author = "Eerkens, Jelmer W. and Lipo, Carl P.",
+	day = "01",
+	doi = "10.1007/s10814-007-9013-z",
+	issn = "1573-7756",
+	journal = "Journal of Archaeological Research",
+	localfile = "../pdfs/eerkens2007culturaltransmissiontheoryandthearchaeologicalrecordprovidingcontexttounderstandingvariationandtemporalchangesinmaterialculture.pdf",
+	month = "Sep",
+	number = "3",
+	pages = "239--274",
+	title = "{Cultural Transmission Theory and the Archaeological Record: Providing Context to Understanding Variation and Temporal Changes in Material Culture}",
+	url = "https://doi.org/10.1007/s10814-007-9013-z",
+	volume = "15",
+	year = "2007"
+}
+
+@article{mesoudi2015culturalevolutionareviewoftheoryfindingsandcontroversies,
+	abstract = "The last two decades have seen an explosion in research analysing cultural change as a Darwinian evolutionary process. Here I provide an overview of the theory of cultural evolution, including its intellectual history, major theoretical tenets and methods, key findings, and prominent criticisms and controversies. `Culture' is defined as socially transmitted information. Cultural evolution is the theory that this socially transmitted information evolves in the manner laid out by Darwin in The Origin of Species, i.e. it comprises a system of variation, differential fitness and inheritance. Cultural evolution is not, however, neo-Darwinian, in that many of the details of genetic evolution may not apply, such as particulate inheritance and random mutation. Following a brief history of this idea, I review theoretical and empirical studies of cultural microevolution, which entails both selection-like processes wherein some cultural variants are more likely to be acquired and transmitted than others, plus transformative processes that alter cultural information during transmission. I also review how phylogenetic methods have been used to reconstruct cultural macroevolution, including the evolution of languages, technology and social organisation. Finally, I discuss recent controversies and debates, including the extent to which culture is proximate or ultimate, the relative role of selective and transformative processes in cultural evolution, the basis of cumulative cultural evolution, the evolution of large-scale human cooperation, and whether social learning is learned or innate. I conclude by highlighting the value of using evolutionary methods to study culture for both the social and biological sciences.",
+	author = "Mesoudi, Alex",
+	day = "01",
+	doi = "10.1007/s11692-015-9320-0",
+	issn = "1934-2845",
+	journal = "Evolutionary Biology",
+	localfile = "../pdfs/mesoudi2016culturalevolutionareviewoftheoryfindingsandcontroversies.pdf",
+	month = "Dec",
+	number = "4",
+	pages = "481--497",
+	title = "{Cultural Evolution: A Review of Theory, Findings and Controversies}",
+	url = "https://doi.org/10.1007/s11692-015-9320-0",
+	volume = "43",
+	year = "2015"
+}
+
+@article{mesoudi2008anexperimentalsimulationofthecopysuccessfulindividualsculturallearningstrategyadaptivelandscapesproducerscroungerdynamicsandinformationalaccesscosts,
+	author = "Mesoudi, Alex",
+	doi = "10.1016/j.evolhumbehav.2008.04.005",
+	issn = "1090-5138",
+	journal = "Evolution and Human Behavior",
+	keywords = "Adaptive landscapes; Copy-successful-individuals; Cultural evolution; Cultural learning; Cultural transmission; Gene-culture coevolution; Indirect bias; Producer--scrounger dynamics; Informational access costs; Prestige bias; Social learning; Virtual arrowhead task",
+	localfile = "../pdfs/mesoudi2008anexperimentalsimulationofthecopysuccessfulindividualsculturallearningstrategyadaptivelandscapesproducerscroungerdynamicsandinformationalaccesscosts.pdf",
+	number = "5",
+	pages = "350--363",
+	title = "{An experimental simulation of the ``copy-successful-individuals'' cultural learning strategy: adaptive landscapes, producer--scrounger dynamics, and informational access costs}",
+	url = "http://www.sciencedirect.com/science/article/pii/S1090513808000494",
+	volume = "29",
+	year = "2008"
+}
+
+@article{rubin1984bayesianlyjustifiableandrelevantfrequencycalculationsfortheappliesstatistician,
+	abstract = "A common reaction among applied statisticians is that the Bayesian statistician's energies in an applied problem must be directed at the a priori elicitation of one model specification from which an optimal design and all inferences follow automatically by applying Bayes's theorem to calculate conditional distributions of unknowns given knowns. I feel, however, that the applied Bayesian statistician's tool-kit should be more extensive and include tools that may be usefully labeled frequency calculations. Three types of Bayesianly justifiable and relevant frequency calculations are presented using examples to convey their use for the applied statistician.",
+	author = "Rubin, Donald B.",
+	issn = "00905364",
+	journal = "The Annals of Statistics",
+	localfile = "../pdfs/rubin1984bayesianlyjustifiableandrelevantfrequencycalculationsfortheappliesstatistician.pdf",
+	number = "4",
+	pages = "1151--1172",
+	publisher = "Institute of Mathematical Statistics",
+	title = "{Bayesianly Justifiable and Relevant Frequency Calculations for the Applies Statistician}",
+	url = "http://www.jstor.org/stable/2240995",
+	volume = "12",
+	year = "1984"
+}
+
+@article{collinselliott2017bayesianinferencewithmontecarloapproximationmeasuringregionaldifferentiationinceramicandglassvesselassemblagesinrepublicanitalyca200bce20ce,
+	author = "Collins-Elliott, Stephen A.",
+	doi = "10.1016/j.jas.2017.01.006",
+	issn = "0305-4403",
+	journal = "Journal of Archaeological Science",
+	keywords = "Bayesian analysis; Hellinger distance; Probability; Ceramics; Glass; Practice theory",
+	localfile = "../pdfs/collinselliott2017bayesianinferencewithmontecarloapproximationmeasuringregionaldifferentiationinceramicandglassvesselassemblagesinrepublicanitalyca200bce20ce.pdf",
+	pages = "37--49",
+	title = "{Bayesian inference with Monte Carlo approximation: Measuring regional differentiation in ceramic and glass vessel assemblages in Republican Italy, ca. 200 BCE--20 CE}",
+	url = "http://www.sciencedirect.com/science/article/pii/S0305440317300067",
+	volume = "80",
+	year = "2017"
+}
+
+@book{mesoudi2011culturalevolutionhowdarwiniantheorycanexplainhumancultureandsynthesizethesocialsciences,
+	author = "Mesoudi, Alex",
+	publisher = "University of Chicago Press",
+	title = "{Cultural evolution: How Darwinian theory can explain human culture and synthesize the social sciences}",
+	year = "2011"
+}
+
+@article{rendell2010whycopyothersinsightsfromthesociallearningstrategiestournament,
+	abstract = "Social learning (learning through observation or interaction with other individuals) is widespread in nature and is central to the remarkable success of humanity, yet it remains unclear why copying is profitable and how to copy most effectively. To address these questions, we organized a computer tournament in which entrants submitted strategies specifying how to use social learning and its asocial alternative (for example, trial-and-error learning) to acquire adaptive behavior in a complex environment. Most current theory predicts the emergence of mixed strategies that rely on some combination of the two types of learning. In the tournament, however, strategies that relied heavily on social learning were found to be remarkably successful, even when asocial information was no more costly than social information. Social learning proved advantageous because individuals frequently demonstrated the highest-payoff behavior in their repertoire, inadvertently filtering information for copiers. The winning strategy (discountmachine) relied nearly exclusively on social learning and weighted information according to the time since acquisition.",
+	author = "Rendell, L. and Boyd, R. and Cownden, D. and Enquist, M. and Eriksson, K. and Feldman, M. W. and Fogarty, L. and Ghirlanda, S. and Lillicrap, T. and Laland, K. N.",
+	doi = "10.1126/science.1184719",
+	eprint = "http://science.sciencemag.org/content/328/5975/208.full.pdf",
+	issn = "0036-8075",
+	journal = "Science",
+	localfile = "../pdfs/rendell2010whycopyothersinsightsfromthesociallearningstrategiestournament.pdf",
+	number = "5975",
+	pages = "208--213",
+	publisher = "American Association for the Advancement of Science",
+	title = "{Why Copy Others? Insights from the Social Learning Strategies Tournament}",
+	url = "http://science.sciencemag.org/content/328/5975/208",
+	volume = "328",
+	year = "2010"
+}
+
+@article{henrich2001theevolutionofprestigefreelyconferreddeferenceasamechanismforenhancingthebenefitsofculturaltransmission,
+	author = "Henrich, Joseph and Gil-White, Francisco J",
+	doi = "10.1016/S1090-5138(00)00071-4",
+	issn = "1090-5138",
+	journal = "Evolution and Human Behavior",
+	keywords = "Status; Prestige; Prestige-biased transmission; Cultural transmission; Social learning; Dual inheritance theory",
+	localfile = "../pdfs/henrich2001theevolutionofprestigefreelyconferreddeferenceasamechanismforenhancingthebenefitsofculturaltransmission.pdf",
+	number = "3",
+	pages = "165--196",
+	title = "{The evolution of prestige: freely conferred deference as a mechanism for enhancing the benefits of cultural transmission}",
+	url = "http://www.sciencedirect.com/science/article/pii/S1090513800000714",
+	volume = "22",
+	year = "2001"
+}
+
+@article{mesoudi2008theculturaltransmissionofgreatbasinprojectilepointtechnologyianexperimentalsimulation,
+	author = "Mesoudi, Alex and O'Brien, Michael J.",
+	doi = "10.1017/S0002731600041263",
+	journal = "American Antiquity",
+	localfile = "../pdfs/mesoudi2008theculturaltransmissionofgreatbasinprojectilepointtechnologyianexperimentalsimulation.pdf",
+	number = "1",
+	pages = "3--28",
+	publisher = "Cambridge University Press",
+	title = "{The Cultural Transmission of Great Basin Projectile-Point Technology I: An Experimental Simulation}",
+	volume = "73",
+	year = "2008"
+}
+
+@article{mesoudi2008theculturaltransmissionofgreatbasinprojectilepointtechnologyiianagentbasedcomputersimulation,
+	author = "Mesoudi, Alex and O'Brien, Michael J.",
+	doi = "10.1017/S0002731600047338",
+	journal = "American Antiquity",
+	localfile = "../pdfs/mesoudi2008theculturaltransmissionofgreatbasinprojectilepointtechnologyiianagentbasedcomputersimulation.pdf",
+	number = "4",
+	pages = "627--644",
+	publisher = "Cambridge University Press",
+	title = "{The Cultural Transmission of Great Basin Projectile-Point Technology II: An Agent-Based Computer Simulation}",
+	volume = "73",
+	year = "2008"
 }
 
