first slide on archaeologicial data

--- a/doc/conferences/201809_CCS/talk/presentation.tex
+++ b/doc/conferences/201809_CCS/talk/presentation.tex
@@ -66,6 +66,15 @@
 \end{frame}
 \section{Introduction}
 
+\begin{frame}
+
+    Archaeological Dataset and questions:
+
+		\uncover<2->{\includegraphics[height=3cm]{images/fortGreekPlaceAndAmphora}} \hfill
+		\uncover<3->{\includegraphics[height=3cm]{images/netrot.pdf}} \hfill
+        \href{run:../../../../full_projects/icrates_abc/scripts/athens.mpg?onclick&loop}{\uncover<4->{\includegraphics[height=3cm]{../../../../full_projects/icrates_abc/scripts/testblack/map_athens_001.png}} } 
+\end{frame}
+
 \begin{frame}{Cultural Evolution}
     Social Traits:
     \begin{center}
@@ -207,23 +216,6 @@
 		@~Equilibrium: personal values  $\rightarrow$ optimal (shared) values.
 	\end{figure}
 	
-\end{frame}
-
-\begin{frame}
-	\begin{center}
-		\Large
-    Thank for you attention!\\
-%		What was the nature of Roman economy?\\
-		\includegraphics[width=2cm]{images/LOGO-ERC.jpg} \hfil	\includegraphics[width=3cm]{../../../logos/epnetLogo.png}\\
-		\vspace{1cm}
-		\scriptsize
-			http://www.roman-ep.net/\\
-			@epnetproject\\
-			fb.com/EPNetProject\\
-			@simoncarrignon
-	\end{center}
-
-
 \end{frame}
 
 %\begin{frame}
