new slides for the present

--- a/doc/conferences/201809_CCS/talk/presentation.tex
+++ b/doc/conferences/201809_CCS/talk/presentation.tex
@@ -68,11 +68,31 @@
 
 \begin{frame}
 
-    Archaeological Dataset and questions:
+    The Roman Empire.
 
 		\uncover<2->{\includegraphics[height=3cm]{images/fortGreekPlaceAndAmphora}} \hfill
 		\uncover<3->{\includegraphics[height=3cm]{images/netrot.pdf}} \hfill
         \href{run:../../../../full_projects/icrates_abc/scripts/athens.mpg?onclick&loop}{\uncover<4->{\includegraphics[height=3cm]{../../../../full_projects/icrates_abc/scripts/testblack/map_athens_001.png}} } 
+\end{frame}
+
+\begin{frame}
+		\uncover<2->{\includegraphics[height=3cm]{images/bang.jpg}} \hfill
+		\uncover<3->{\includegraphics[height=3cm]{images/temin.jpg}} \hfill
+
+    Quantitatives approach can help refine correct knowledge
+    \begin{itemize}
+        \item No Theories
+        \item No common framework
+        \item \dots
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    A temporal and highly contingent process:
+    \begin{itemize}
+        \item Evolutionary Biology
+        \item Cultural Evolution
+    \end{itemize}
 \end{frame}
 
 \begin{frame}{Cultural Evolution}
@@ -177,7 +197,6 @@
 
 
 \begin{frame}{General Framework}
-    
     \begin{center}
 	\includegraphics[width=.8\textwidth]{images/cooev.png}	
     \end{center}
@@ -206,6 +225,35 @@
 	
 
 
+
+\begin{frame}{General Framework}
+    \begin{center}
+	\includegraphics[width=.8\textwidth]{images/cooev.png}	
+    \end{center}
+    At each level, every actio can be very costly:
+    \begin{itemize}
+        \uncover<2->{ \item  agents meet every other producers ($N^{2}\times(N_{goods}-1)$)}
+        \uncover<3->{ \item  agents check what they have \& they need ($N_{good} \times 2$)}
+        \uncover<4->{ \item  rank of everyone ($N\times log(N)$}
+        \uncover<5->{ \item  probabilistic copy $N*(Q)$ ($Q < N -1$)}
+        \uncover<6->{ \item  \dots }
+    \end{itemize}
+    \uncover<7->{$\rightarrow$ Need for parallelisation \huge}
+\end{frame}
+
+
+\begin{frame}{Pandora}
+    Rubio 2010
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=.3\textwidth]{images/splitPandora.png}
+        \includegraphics[width=.3\textwidth]{images/numbersCPU.png}
+        \caption{Repartition of agents between nodes. from Rubion 2012.}
+        \label{fig:splp}
+    \end{figure}
+    
+\end{frame}
+
 \begin{frame}{Results: Economic Dynamics}
 	\begin{figure}
 	    \caption{Example for 3 goods and 500 agents}
@@ -215,13 +263,18 @@
 	    \end{columns}
 		@~Equilibrium: personal values  $\rightarrow$ optimal (shared) values.
 	\end{figure}
-	
 \end{frame}
 
-%\begin{frame}
-%    \Huge
-%    Thank for you attention!
-%\end{frame}
+
+\begin{frame}
+
+    Now we have a model. How can we use it to learn about:
+    The Roman Empire.
+
+		\uncover<2->{\includegraphics[height=3cm]{images/fortGreekPlaceAndAmphora}} \hfill
+		\uncover<3->{\includegraphics[height=3cm]{images/netrot.pdf}} \hfill
+        \href{run:../../../../full_projects/icrates_abc/scripts/athens.mpg?onclick&loop}{\uncover<4->{\includegraphics[height=3cm]{../../../../full_projects/icrates_abc/scripts/testblack/map_athens_001.png}} } 
+\end{frame}
 \begin{frame}{}
     An Agent-Based Model of Trade in the Roman~East~(200~BC--300~AD):
     \begin{center}
